<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string-array name="alphabet">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string name="start_game">Start a New Game</string>
    <string name="title">Tic-Tac-Toe</string>
    <string name="player_name">Player Name</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="moves_label">Moves :</string>
    <string name="score">Score</string>
    <string name="name">Player</string>
    <string name="start_two_player">Start Two Player Game</string>
    <string name="start_single_player">Play against your Phone</string>
    <string name="versus">v / s</string>
    <string name="choose_names">Change Names and Symbols</string>
    <string name="symbol_edit_help">Tap to change symbol.</string>
    <string name="choose_board_size">Choose Board Size</string>

    <string-array name="icons">
        <item>X</item>
        <item>O</item>
        <item>&#xf109;</item>
        <item>&#xf129;</item>
        <item>&#xf12b;</item>
        <item>&#xf12d;</item>
        <item>&#xf13d;</item>
        <item>&#xf140;</item>
        <item>&#xf144;</item>
        <item>&#xf145;</item>
        <item>&#xf14d;</item>
        <item>&#xf153;</item>
        <item>&#xf158;</item>
        <item>&#xf15a;</item>
        <item>&#xf188;</item>
        <item>&#xf1b9;</item>
        <item>&#xf1dd;</item>
        <item>&#xf1de;</item>
        <item>&#xf1f5;</item>
        <item>&#xf266;</item>
        <item>&#xf277;</item>
        <item>&#xf27b;</item>
        <item>&#xf295;</item>
        <item>&#xf297;</item>
        <item>&#xf310;</item>
        <item>&#xf108;</item>

    </string-array>
</resources>
