<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/twoPlayer"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_two_player"
            android:textColor="#0ff"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/singlePlayer"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_single_player"
            android:textColor="#ff0"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </LinearLayout>
</layout>